--- a/Crime_Rate(Population_normalized)/Data_Processing_EDA_2.ipynb
+++ b/Crime_Rate(Population_normalized)/Data_Processing_EDA_2.ipynb
@@ -9523,7 +9523,7 @@
    "id": "144138c4",
    "metadata": {},
    "source": [
-    "#### Multicollinearity"
+    "### Multicollinearity"
    ]
   },
   {
@@ -9631,7 +9631,7 @@
    "id": "5d44a30a",
    "metadata": {},
    "source": [
-    "#### Group Comparison Analysis"
+    "### Group Comparison Analysis"
    ]
   },
   {
